--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/auth-helpers-sveltekit": "^0.10.2",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/auth-ui-svelte": "^0.2.2",
     "@supabase/supabase-js": "^2.33.0",
     "stripe": "^13.3.0"
